--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="page__footer-follow">
 <a href="http://shanti-yoga.ch" target="_blank">
-<img align="left" src="/assets/images/logo_shanti.jpg" hspace="20">
+<img align="left" src="{{ site.url }}/assets/images/logo_shanti.jpg" hspace="20">
 </a>
 </div>
 
