--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,6 @@
   <a href="http://shanti-yoga.ch" target="_blank">http://shanti-yoga.ch</a>
   </div>
 
-<div class="page__footer-copyright"><a href="/impressum/">Impressum</a> | <a href="sitemap.xml">Sitemap</a></div>
+<div class="page__footer-copyright"><a href="/impressum/">Impressum</a> | <a href="/sitemap.xml">Sitemap</a></div>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
