--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="page__footer-copyright">
-  Shanti Yoga und Meditation - Praxis für Ganzheitliche Therapien<br>
+  Mother of life Shanti Yoga - Praxis für Gesamtheitliche Therapien<br>
   <a href="http://shanti-yoga.ch" target="_blank">http://shanti-yoga.ch</a>
   </div>
 
