--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,3 +42,8 @@ window.cookieconsent.initialise({
       }
 });
 </script>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WTVBS65"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
